k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo
spec:
  type: ClusterIP
  selector:
    app: k8s-demo
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
